--- a/src/components/hero.pug
+++ b/src/components/hero.pug
@@ -5,7 +5,7 @@ section.hero
                 +image('content/user.jpg', 'user-pic')
             .hero__data
                 table
-                    - var data=[['Проживаю'.'Санкт-Петербург'],['Возраст'.'26 лет'],['Родилась'.'5 ноября 1992']];
+                    - var data=[['Проживаю','Санкт-Петербург'],['Возраст','26 лет'],['Родилась','5 ноября 1992']];
                     each row in data
                         tr
                             td #{row[0]}
@@ -15,9 +15,6 @@ section.hero
             h3
                 p.hero__welcom Привет, меня зовут
                 p.hero__name Буслова Катерина
-                p.hero__text.text 
+                p.hero__text.text
                     p Я занимаюсь разработкой современных сайтов и приложений. Мне нравится делать интересные и современные проекты
                     p Этот сайт я сделал в рамках обучения в Школе онлайн образования Loftschool.Чуть позже я освежу свой контент.А пока посмотрите как тут все классно и красиво!
-                //- section.benefit
-                //- h2.benefit-skill__title Чем я могу быть полезна вам
-                //- p.benefit-skill__text Этот сайт я сделал в рамках обучения в Школе онлайн образования Loftschool.Чуть позже я освежу свой контент.А пока посмотрите как тут все классно и красиво!
