--- a/src/styles/layout/base.pcss
+++ b/src/styles/layout/base.pcss
@@ -51,7 +51,7 @@ button {
   box-sizing: border-box;
 }
 
-ul {
+ul,li {
   padding: 0;
   margin: 0;
   list-style: none;
@@ -89,5 +89,9 @@ img {
 }
 .text {
   font-size:14px;
-  color:$text-color;
+  color:#414c63;
+}
+.title {
+  font-size: 30px;
+  font-weight: 600;
 }
