--- a/src/styles/blocks/socials.pcss
+++ b/src/styles/blocks/socials.pcss
@@ -1,4 +1,11 @@
-.socials {   
-height:25px;
-width:25px;
+.socials {
+display: flex;
+flex-flow: row;
+}
+.socials__item {
+    padding-left: 10%;
+}
+.socials__icon {
+    height:25px;
+    width:25px;
 }
