1 and 2 section pug,pcss

--- a/src/styles/blocks/skill.pcss
+++ b/src/styles/blocks/skill.pcss
@@ -4,20 +4,20 @@
   transform: rotate(-180deg);
   fill: transparent;
   position: relative;
-
-  &__circle {
+}
+.skill__circle {
     fill: transparent;
   }
-  &__circle_under {
+.skill__circle_under {
     stroke: #eaeaea;
     stroke-width: 0.3125rem;
   }
-  &__circle_above {
+.skill__circle_above {
     stroke-width: 0.75rem;
     stroke-dasharray: 288;
     stroke-dashoffset: 100;
   }
-  &__title {
+.skill__title {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -25,7 +25,6 @@
     text-align: center;
     font-size: 18px;
     font-weight: 700;
-    color:#414c63;
+    color: $text-color;
     opacity: .7;
   }
-}
