--- a/src/styles/blocks/skills-row.pcss
+++ b/src/styles/blocks/skills-row.pcss
@@ -1,10 +1,7 @@
-.skills-row {
-
-  &__title {
+.skills__title {
     margin-bottom: 50px;
   }
-  &__item {
+  .scills__item {
     margin-bottom: 50px;
     margin-left: 2.5rem;
   }
-}
