--- a/src/styles/blocks/skills.pcss
+++ b/src/styles/blocks/skills.pcss
@@ -4,7 +4,7 @@
   flex-direction: column;
   justify-content: center;
 }
-.container-skills {
+.skills__container {
   display: flex;
   flex-direction: column;
 
@@ -15,37 +15,42 @@
     background-size: contain;
     background-repeat: no-repeat;
     display: block;
-    bottom: 25%;
-    height: 60%;
+    height: 50%;
     width: 40%;
-    left: 5%;
-    z-index: 10;
+    left: -5rem;
+    bottom:45%;
   }
 }
 .skills__content {
   width: 48%;
   margin: 0 auto 5.125rem;
-} 
+}
 .skills__title {
   font-size: 24px;
-  color:#414c63;
+  color: #414c63;
   font-weight: 700;
   margin-bottom: 35px;
+  padding-bottom: 20px;
 
   @include tablets {
     text-align: center;
   }
 }
-.skills-text {
+.skills__content-text {
   font-weight: 600;
   font-size: 16px;
-  opacity: 0.7;
-  padding-top: 50px;
+  opacity: 0.8;
 
   @include tablets {
     text-align: center;
     line-height: 24px;
   }
+}
+.skills__bg {
+  position: absolute;
+  z-index: -777;
+  left: -18.5%;
+  bottom: 51%;
 }
 .skills__user {
   display: flex;
@@ -56,7 +61,7 @@
     justify-content: center;
   }
 }
-.skills__user-container {
+.skills__user {
   width: 65%;
 }
 .skills__list {
