добавила секцию с отзывами и портфолио

--- a/src/components/hero.pug
+++ b/src/components/hero.pug
@@ -2,7 +2,7 @@ section.hero
     .container.container-hero
         .hero__face
             .hero__avatar
-                +image('content/user.jpg', 'user-pic')
+                +image('content/user/user.jpg', 'user-pic')
             .hero__data
                 table.hero__desc
                     - var data=[['Проживаю:','Санкт-Петербург'],['Возраст:','26 лет'],['Родилась:','5 ноября 1992']];
