--- a/src/index.pug
+++ b/src/index.pug
@@ -12,11 +12,11 @@ html(lang="ru")
       .maincontent
         include components/welcom
         include components/hero
-        include components/skills
-        include components/job
+        .middle-section
+          include components/skills
+          include components/job
         .maincontent__autmn-bg
-          include components/reviews
-          include components/form
+          include components/feedback
           include components/footer
 
 
