--- a/src/styles/layout/base.pcss
+++ b/src/styles/layout/base.pcss
@@ -93,5 +93,10 @@ img {
 }
 .title {
   font-size: 30px;
-  font-weight: 600;
+  color: #414c63;
+  font-weight: 700;
+  margin-bottom: 35px;
+    @include tablets {
+    text-align: center;
+  }
 }
