--- a/src/components/form.pug
+++ b/src/components/form.pug
@@ -1,16 +1,27 @@
-section.form 
-    h2.feedback__title.title Связаться со мной
-    form.feedback__form
-        label.feedback__form-block
-            .feedback__label-text Ваше имя
-                +icon(`User`,'feedback-icon')
-                input.feedback-name(type="text" name='name' id='name')
-        label.feedback__form-block
-            .feedback__label-text Ваш email
-            +icon(`Envelope`,'feedback-icon')
-            input.feedback-name(type="text" name='mail' id='mail')
-        label.feedback__form-block
-            .feedback__label-text Сообщение к письму
-            +icon(`Chat`,'feedback-icon')
-            textarea.feedback-name(type="text" name='comment' id='comment')
-        button.form__button(type="submit" name='Btn') Отправить
+section.form
+    .container.container-form
+        h2.section-title.section-title__form Связаться со мной
+        form.form(action="#")
+            form.form(action="#")
+                .form__row
+                    .form__block
+                        label.form__block-title(for='name') Ваше имя
+                        .input
+                            +icon(`User`,'feedback-icon')
+                            input.form__block-input(type='text', id='name', name='name', placeholder="Ковальчук Дмитрий", required='')
+                        .error
+                    .form__block
+                        label.form__block-title(for='email') Ваш email
+                        .input
+                            +icon(`Envelope`,'feedback-icon')
+                            input.form__block-input(type='text', id='email', name='email', placeholder="loftschool@study.com", required='')
+                        .error
+                .form__row
+                    .form__block
+                        label.form__block-title(for='comment') Сообщение к письму
+                        .input
+                            +icon(`Chat`,'feedback-icon')
+                            textarea.form__block-input.form__block-input-textarea(type='text', id='comment', name='comment', placeholder="Требуется ваша помощь в создании сайта. Интересуют сроки и цена вопроса", required='')
+                        .error
+                .form__confirm
+                    button#send.btn.form__confirm-btn(type='submit') Отправить
