--- a/src/mixins.pug
+++ b/src/mixins.pug
@@ -4,7 +4,7 @@ mixin icon(name, className)
     use(xlink:href=icon.url)
 
 mixin image(path, className, description, attrRole)
-  if role
-    img(src=require(`images/${path}`) class=className alt=description role= attrRole)
+  if attrRole
+    img(src=require(`images/${path}`) class=className alt=description role=attrRole)
   else
     img(src=require(`images/${path}`) class=className alt=description)
