--- a/src/styles/blocks/form.pcss
+++ b/src/styles/blocks/form.pcss
@@ -1,5 +1,5 @@
 .form {
-  padding-right: 275px;
+  min-width: 60%;
 }
 .form__row {
     display: flex;
@@ -8,9 +8,10 @@
 .form__block {
     flex: 1;
     display: flex;
-    flex-direction: column;
     margin-right: 50px;
-    border-bottom: 2px solid #414c63;
+    border-bottom: 1px solid #414c63;
+    opacity: 0.8;
+    flex-direction: column;
 
   &:last-child {
       margin-right: 0;
@@ -25,7 +26,7 @@
     border: none;
     color: #414c63;
     outline: none;
-    padding: 20px 0;
+    padding: 20px 1rem;
     width: 100%;
 
   &::-webkit-input-placeholder {
@@ -37,21 +38,16 @@
 .form__block-title {
     font-weight: 600;
     margin-left: 50px;
-}
-.form__block-icon {
-    width: 32px;
-    height: 30px;
-    fill: $text-color;
-    margin-right: 20px;
+    opacity: 0.8;
 }
 .form__block-input-textarea {
     resize: vertical;
-    width: 60%;
+    width: 100%;
     line-height: 1.7em;
 }
 .form__confirm-btn {
-    width: 45%;
-    padding: 25px 100px;
+    width: 40%;
+    padding: 1.5rem 6rem;
     background-image: linear-gradient(to right, #9100ef 0%, #5500f2 100%);
     text-transform: uppercase;
     font-size: 18px;
@@ -68,4 +64,10 @@
 .input {
   display: flex;
   align-items: center;
+}
+.feedback-icon {
+    width: 32px;
+    height: 30px;
+    fill: $text-color;
+    opacity: 0.8;
 }
