--- a/src/components/menu.pug
+++ b/src/components/menu.pug
@@ -1,3 +1,5 @@
+mixin menu(mod)
+    ul(class='menu menu--' + mod)
 - var Menu = ['Главная', 'Обо мне', 'Навыки', 'Работы', 'Отзывы', 'Связаться'];
 nav.menu
     ul.menu__list
