--- a/src/styles/blocks/feedback.pcss
+++ b/src/styles/blocks/feedback.pcss
@@ -1,7 +1,8 @@
 .feedback {
-      background-image: url("../images/parallax/budda.jpg");
+    background-image: url("../images/parallax/budda.jpg");
     background-repeat: no-repeat;
     background-size: cover;
+    padding-bottom: 50px;
 }
 .container-feedback {
   display: flex;
