--- a/src/styles/blocks/menu.pcss
+++ b/src/styles/blocks/menu.pcss
@@ -1,7 +1,6 @@
 .menu {
     display: flex;
 }
-
 .menu__item {
     font-size: 16px;
     padding-right: 9%;
@@ -13,3 +12,11 @@
   text-decoration: none;
   white-space: nowrap;
 }
+.menu.menu--footer {
+  height: auto;
+  color: white;
+}
+.menu__link:hover {
+    color: white;
+    border-bottom: 2px solid #ffffff;
+  }
