--- a/src/components/reviews.pug
+++ b/src/components/reviews.pug
@@ -5,7 +5,7 @@ ul.feedback__slider
         .reviews__content
             blockreviews.reviews__text Эта девушка проходила обучение веб-разработке не где-то, а в LoftSchool! 4,5 месяца только самых тяжелых испытаний и бессонных ночей!
             .reviews__author
-                .user.user--horizontal
+                .user.user--photo
                     .user__avatar.user__avatar_small
                         +image('content/user/reviewsdima.jpg', 'user__avatar--small-pic')
                     .user__bio
@@ -17,7 +17,7 @@ ul.feedback__slider
         .reviews__content
             blockquote.reviews__text Этот код выдержит любые испытания. Только пожалуйста, не загружайте сайт на слишком старых браузерах:)
             .reviews__author
-                .user.user--horizontal
+                .user.user--photo
                     .user__avatar.user__avatar_small
                         +image('content/user/reviewsvova.jpg', 'user__avatar--small-pic')
                     .user__bio
