--- a/src/components/skills.pug
+++ b/src/components/skills.pug
@@ -17,9 +17,9 @@ section.skills
                             each skill in item[1]
                                 li.diagram__item
                                     .skill
-                                        svg(viewBox='0 0 100 100' preserveAspectRatio='none').skill__shape
-                                        circle(r=40 cx='50' cy="50").skill__circle.skill__circle_under
-                                        circle(r=40 cx='50' cy="50" stroke="url(#gradient)").skill__circle.skill__circle_above
+                                        svg(viewBox="0 0 100 100" ).skill__shape
+                                        circle(r=40 cx="50" cy="50").skill__circle.skill__circle_under
+                                        circle(r=40 cx="50" cy="50" stroke="url(#gradient)").skill__circle.skill__circle_above
                                         linearGradient(id="gradient" x1="0%" y1="0%" x2="100%" y2="0")
                                             stop(offset="0%" stop-color="#5500f2")
                                             stop(offset="100%" stop-color="#8b00ef")
