отредактировала классы, добавила якоря

--- a/src/components/feedback.pug
+++ b/src/components/feedback.pug
@@ -1,5 +1,5 @@
-section.feedback
-    .container.container-feedback
+section.feedback#feedback
+    .container.feedback-container
         .feedback__title
             h2.title.feedback-title Что обо мне говорят
                 button.arrow__prev_rounded(type='bottun')
