--- a/src/components/job-slider.pug
+++ b/src/components/job-slider.pug
@@ -21,5 +21,5 @@ mixin slider(slidesNum)
             .desc-content
                 h4.desc__title Сайт школы образования
                 .desc__info Эта девушка проходила обучение веб-разработке не где-то, а в LoftSchool! 3,5 месяца только самых тяжелых испытаний и бессонных ночей!
-                a.desc-link Посмотреть сайт
+                a.desc-link(href="#") Посмотреть сайт
                     +icon('Link', 'desc-link__svg')
