--- a/src/components/reviews.pug
+++ b/src/components/reviews.pug
@@ -3,7 +3,7 @@ ul.feedback__slider
         .reviews__image
             +icon('Quote', 'reviews__icon')
         .reviews__content
-            blockreviews.reviews__text Эта девушка проходила обучение веб-разработке не где-то, а в LoftSchool! 4,5 месяца только самых тяжелых испытаний и бессонных ночей!
+            blockreviews.text Эта девушка проходила обучение веб-разработке не где-то, а в LoftSchool! 4,5 месяца только самых тяжелых испытаний и бессонных ночей!
             .reviews__author
                 .user.user--photo
                     .user__avatar.user__avatar_small
@@ -15,7 +15,7 @@ ul.feedback__slider
         .reviews__image
             +icon('Quote', 'reviews__icon')
         .reviews__content
-            blockquote.reviews__text Этот код выдержит любые испытания. Только пожалуйста, не загружайте сайт на слишком старых браузерах:)
+            blockquote.text Этот код выдержит любые испытания. Только пожалуйста, не загружайте сайт на слишком старых браузерах:)
             .reviews__author
                 .user.user--photo
                     .user__avatar.user__avatar_small
