--- a/src/styles/blocks/header.pcss
+++ b/src/styles/blocks/header.pcss
@@ -1,9 +1,9 @@
-.header {
+.header-container {
     display:flex;
     flex-flow: row;
     justify-content:space-between;
-    padding-top: 73px;
+    padding-top: 3%;
     align-items: center;
     height: 100px;
-    padding: 0 20px;
 }
+
