--- a/src/styles/blocks/hero.pcss
+++ b/src/styles/blocks/hero.pcss
@@ -1,7 +1,7 @@
 .hero {
     position: relative;
 }
-.container-hero {
+.hero-container {
     height: 100%;
     display: flex;
     justify-content: center;
@@ -63,10 +63,7 @@
         font-size: 16px;
     }
     .title__name {
-       color: #414c63;
-       opacity: 1;
-       font-size: 36px; 
-       font-weight: 600;
+      margin-bottom: 0;
        padding-bottom: 50px;
     }
 }
