--- a/src/styles/blocks/skills.pcss
+++ b/src/styles/blocks/skills.pcss
@@ -4,7 +4,7 @@
   flex-direction: column;
   justify-content: center;
 }
-.skills__container {
+.skills-container {
   display: flex;
   flex-direction: column;
 
@@ -20,22 +20,14 @@
     bottom:20%;
   }
 }
+.skills-title {
+  font-size: 30px;
+}
 .skills__content {
   width: 48%;
   margin: 0 auto 5.125rem;
 }
 
-.skills__content-text {
-  font-weight: 600;
-  font-size: 16px;
-  opacity: 0.8;
-  max-width: 70%;
-
-  @include tablets {
-    text-align: center;
-    line-height: 24px;
-  }
-}
 .skills__user {
   display: flex;
  justify-content: center;
@@ -45,7 +37,7 @@
     justify-content: center;
   }
 }
-.skills__title {
+.skills__item-title {
   font-size: 20px;
   color: #414c63;
   font-weight: 700;
