--- a/src/styles/blocks/socials.pcss
+++ b/src/styles/blocks/socials.pcss
@@ -1,11 +1,15 @@
 .socials {
-display: flex;
-flex-flow: row;
+    display: flex;
+    flex-flow: row;
 }
 .socials__item {
-    padding-left: 10%;
+    padding-left: 45px;
+    &:first-child {
+        padding-left: 0;
+    }
 }
 .socials__icon {
+    fill: #414c63;
     height:25px;
     width:25px;
 }
