--- a/src/components/hero.pug
+++ b/src/components/hero.pug
@@ -1,5 +1,5 @@
-section.hero
-    .container.container-hero
+section.hero#hero
+    .container.hero-container
         .hero__face
             .hero__avatar
                 +image('content/user/user.jpg', 'user-pic')
@@ -12,8 +12,8 @@ section.hero
                             td.hero__desc-text #{row[1]}
         .hero__content
             .hero__text
-                p Привет, меня зовут
-                h2.title__name Буслова Катерина
-                p Я занимаюсь разработкой современных сайтов и приложений. Мне нравится делать интересные и современные проекты
+                p.text Привет, меня зовут
+                h2.title.title__name Буслова Катерина
+                p.text Я занимаюсь разработкой современных сайтов и приложений. Мне нравится делать интересные и современные проекты
             .hero__comment
                 p.hero__comment-text Этот сайт я сделала в рамках обучения в Школе онлайн образования Loftschool.Чуть позже я освежу свой контент.А пока посмотрите как тут все классно и красиво!
