--- a/src/components/job.pug
+++ b/src/components/job.pug
@@ -1,4 +1,4 @@
-section.job
-	.container.container-job
-		h2.title.job__title Мои работы
-			include job-slider.pug
+section.job#job
+	.container.job-container
+		h2.title Мои работы
+			include job-slider
