--- a/src/components/skills.pug
+++ b/src/components/skills.pug
@@ -1,8 +1,8 @@
-section.skills
-    .container.skills__container
+section.skills#skills
+    .container.skills-container
         .skills__content
-            h2.title Чем я могу быть вам полезна
-            p.skills__content-text Этот сайт я сделала в рамках обучения в Школе онлайн образования Loftschool. Чуть позже я освежу в нем свой контент. А пока посмотрите, как тут всё классно и красиво!
+            h2.title.skills-title Чем я могу быть вам полезна
+            p.text Этот сайт я сделала в рамках обучения в Школе онлайн образования Loftschool. Чуть позже я освежу в нем свой контент. А пока посмотрите, как тут всё классно и красиво!
         .skills__user
             ul.skills__list 
                 -
@@ -12,15 +12,15 @@ section.skills
                     ]
                 each item in skills
                     li.skills__item.skills__row
-                        h3.skills__title #{item[0]}
+                        h3.skills__item-title #{item[0]}
                         ul.diagram__list
                             each skill in item[1]
                                 li.diagram__item
                                     .skill
                                         svg(viewBox='0 0 100 100' preserveAspectRatio='none').skill__shape
-                                        circle(r=40 cx='50' cy="50").skill__circle.skill__circle_under
-                                        circle(r=40 cx='50' cy="50" stroke="url(#gradient)").skill__circle.skill__circle_above
-                                        linearGradient(id="gradient" x1="0%" y1="0%" x2="100%" y2="0")
-                                            stop(offset="0%" stop-color="#5500f2")
-                                            stop(offset="100%" stop-color="#8b00ef")
+                                            circle(r=40 cx='50' cy="50").skill__circle.skill__circle_under
+                                            circle(r=40 cx='50' cy="50" stroke="url(#gradient)").skill__circle.skill__circle_above
+                                            linearGradient(id="gradient" x1="0%" y1="0%" x2="100%" y2="0")
+                                                stop(offset="0%" stop-color="#5500f2")
+                                                stop(offset="100%" stop-color="#8b00ef")
                                     .skill__title #{skill}
