--- a/src/components/welcom.pug
+++ b/src/components/welcom.pug
@@ -1,8 +1,9 @@
-section(class='welcome fullscreen-section')
+section.welcome.fullscreen-section#welcome
     include header
-    .welcom__container
-        h2.welcome__title Личный сайт<br> веб-разработчика
-        h1.welcome__name-title Буслова<br> Катерина
-        .welcome__scroll 
-            a.welcom__scroll-link Скролл
+    .container.welcome-container
+        h1.title.welcome-title
+            span.welcome-title__text Личный сайт <br> веб-разработчика
+            span.welcome-title__name Буслова<br> Катерина
+        .welcome-scroll 
+            a.welcome__scroll-link(href="#") Скролл
                 +icon('Scroll','scroll-svg')
