--- a/src/styles/blocks/feedback.pcss
+++ b/src/styles/blocks/feedback.pcss
@@ -4,7 +4,7 @@
     background-size: cover;
     padding-bottom: 50px;
 }
-.container-feedback {
+.feedback-container {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
