--- a/src/styles/blocks/job.pcss
+++ b/src/styles/blocks/job.pcss
@@ -1,15 +1,10 @@
 .job {
   min-height: 1088px;
+  max-height: 1088px;
 }
-.container-job {
+.job-container {
   padding: 150px 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
-}
-.job__title {
-  width: 100%;
-  color: #414c63;
-  font-size: 36px;
-  font-weight: 700;
 }
