--- a/src/styles/blocks/welcom.pcss
+++ b/src/styles/blocks/welcom.pcss
@@ -2,8 +2,9 @@
     background-image: url("../images/parallax/mountain.jpg");
     background-repeat: no-repeat;
     background-size: cover;
+    min-height: 1080px;
 }
-.welcom__container {
+.welcome-container {
     position: relative;
     display: flex;
     flex-direction: column;
@@ -11,29 +12,32 @@
     align-items: center;
     justify-content: center;
 }
-.welcome__title {
-    font-size: 18px;
-    color:#414c63;
-    opacity: 0.8;
-    font-weight: 400;
-    text-align: center;
-}
-.welcome__name-title {
+.welcome-title {
+    display: flex;
+    flex-flow: column;
     font-size: 72px;
     color:#414c63;
     font-weight: 500;
     text-align: center;
     line-height: 100%;
-    margin-bottom: 317px;
+    padding-top: 30%;
+    padding-bottom: 30%;
 }
-.welcome__scroll {
+.welcome-title__text {
+    font-size: 18px;
+    color:#414c63;
+    opacity: 0.8;
+    font-weight: 400;
+    text-align: center;
+    line-height: normal;
+}
+.welcome-scroll {
     position: absolute;
     display: flex;
     justify-content: center;
     align-items: center;
     bottom: 15%;
-    width: 100%;  
-    padding: 50px 0;
+    width: 100%;
 }
 
 .scroll-svg {
