--- a/src/styles/layout/base.pcss
+++ b/src/styles/layout/base.pcss
@@ -88,11 +88,12 @@ img {
   max-height: 100%;
 }
 .text {
-  font-size:14px;
+  font-size:16px;
   color:#414c63;
+  opacity: 0.7;
 }
 .title {
-  font-size: 30px;
+  font-size: 36px;
   color: #414c63;
   font-weight: 700;
   margin-bottom: 35px;
