edit sections and components

--- a/src/components/feedback.pug
+++ b/src/components/feedback.pug
@@ -1,10 +1,10 @@
 section.feedback#feedback
     .container.feedback-container
-        .feedback__title
-            h2.title.feedback-title Что обо мне говорят
-                button.arrow__prev_rounded(type='bottun')
-                  +icon('short_arrow', 'arrow__btn--prev')
-                button.arrow__next_rounded(type='bottun')
-                  +icon('short_arrow', 'arrow__btn--next')
-        include reviews
-        include form
+      button.feedback-arrow__prev(type='button')
+        +icon('short_arrow', 'arrow__btn--prev')
+      button.feedback-arrow__next(type='button')
+        +icon('short_arrow', 'arrow__btn--next')
+      .feedback__title
+        h2.title.feedback-title Что обо мне говорят
+      include reviews
+      include form
