--- a/src/styles/blocks/form.pcss
+++ b/src/styles/blocks/form.pcss
@@ -1,6 +1,9 @@
 .form-container {
- 
   max-width: 60%;
+  margin-left: 130px;
+}
+.form-title {
+  padding-top: 200px;
 }
 .form__row {
     display: flex;
@@ -62,13 +65,7 @@
     border-bottom-right-radius: 25px;
   }
 
-.input {
+.form__input {
   display: flex;
   align-items: center;
-}
-.feedback-icon {
-    width: 32px;
-    height: 30px;
-    fill: $text-color;
-    opacity: 0.8;
 }
