--- a/src/styles/blocks/menu.pcss
+++ b/src/styles/blocks/menu.pcss
@@ -15,6 +15,8 @@
 .menu.menu--footer {
   height: auto;
   color: white;
+  padding-top: 10px;
+  margin-right: 440px;
 }
 .menu__link:hover {
     color: white;
