--- a/src/styles/blocks/slider.pcss
+++ b/src/styles/blocks/slider.pcss
@@ -82,7 +82,7 @@
   fill: #858b97;
   transition: fill 0.2s;
 }
-.desc-wrap {
+.slider-desc__wrap {
   position: relative;
   width: 34%;
   display: flex;
@@ -108,10 +108,10 @@
   font-weight: 800;
   line-height: 473px;
 }
-.code-link-list {
+.slider-desc__list {
   display: flex;
 }
-.code-link-list__item {
+.slider-desc__item {
   background-color: #f2f5f9;
   margin-left: 15px;
   padding: 12px;
@@ -123,27 +123,27 @@
       margin-left: 0;
     }
 }
-.desc {
+.slider-desc {
     padding-left: 11.2rem;
 }
-.desc-content {
+.slider-desc__content {
   height: 295px;
   margin-top: 55px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
-.desc__title {
+.slider-desc__title {
   color: #414c63;
   font-size: 30px;
   font-weight: 700;
 }
-.desc__info {
+.slider-desc__info {
   color: #2b3948;
   font-size: 16px;
   font-weight: 400;
 }
-.desc-link {
+.slider-desc__link {
   font-size: 18px;
   font-weight: 700;
   padding-left: 35px;
@@ -153,10 +153,10 @@
       color: #414c63;
     }
 }
-.desc-link:hover .desc-link__svg {
+.slider-desc__link:hover .slider-desc__link__svg {
   fill: #414c63;
 }
-.desc-link__svg {
+.slider-desc__link__svg {
   position: absolute;
   left: 0;
   top: 50%;
