--- a/src/styles/blocks/socials.pcss
+++ b/src/styles/blocks/socials.pcss
@@ -13,3 +13,18 @@
     height:25px;
     width:25px;
 }
+.socials--footer .socials-item {
+  width: 50px;
+  height: 50px;
+  border: 1px solid #63656c;
+  border-radius: 50%;
+  transition: border 0.3s;
+    &:hover {
+      border: 1px solid #414c63;
+      transition: border 0.3s;
+    }
+    &:hover .social__svg {
+      fill: #414c63;
+      transition: fill 0.3s;
+    }
+}
