--- a/src/components/hero.pug
+++ b/src/components/hero.pug
@@ -16,4 +16,4 @@ section.hero#hero
                 h2.title.title__name Буслова Катерина
                 p.text Я занимаюсь разработкой современных сайтов и приложений. Мне нравится делать интересные и современные проекты
             .hero__comment
-                p.hero__comment-text Этот сайт я сделала в рамках обучения в Школе онлайн образования Loftschool.Чуть позже я освежу свой контент.А пока посмотрите как тут все классно и красиво!
+                p.text.hero__comment-text Этот сайт я сделала в рамках обучения в Школе онлайн образования Loftschool.Чуть позже я освежу свой контент.А пока посмотрите как тут все классно и красиво!
