--- a/src/components/welcom.pug
+++ b/src/components/welcom.pug
@@ -6,4 +6,4 @@ section.welcome.fullscreen-section#welcome
             span.welcome-title__name Буслова<br> Катерина
         .welcome-scroll 
             a.welcome__scroll-link(href="#") Скролл
-                +icon('Scroll','scroll-svg')
+                +icon('Scroll','welcome__scroll-svg')
