--- a/src/styles/blocks/welcom.pcss
+++ b/src/styles/blocks/welcom.pcss
@@ -39,8 +39,14 @@
     bottom: 15%;
     width: 100%;
 }
-
-.scroll-svg {
+.welcome__scroll-link {
+    font-size: 18px;
+    color:#414c63;
+    font-weight: 600;
+    text-decoration: none;
+}
+.welcome__scroll-svg {
     width: 28px;
     height: 30px;
+    fill: #414c63;
 }
