--- a/src/components/job-slider.pug
+++ b/src/components/job-slider.pug
@@ -1,8 +1,9 @@
-mixin slider(slidesNum)
+mixin slider(slidesnum)
   ul.slider-list
-    - for(var i = 0; i < slidesNum.length; i++)
-      li.slider-list__item(data-slide=`${slidesNum[i]}`)
-        +image(`content/portfolio/project-${slidesNum[i]}.jpg`, 'slider-list__item-pic', 'img', 'Project')
+    - for(var i = 0; i < slidesnum.length; i++)
+      li.slider-list__item(data-slide=`${slidesnum[i]}`)
+        button.slider-list__btn(type="button")
+          +image(`content/portfolio/project-${slidesnum[i]}.jpg`, 'slider-list__item-pic', 'img', 'Project')
 .slider-wrap
   .slider
     +image('content/portfolio/project-preview.jpg', 'slider__preview', 'img', 'Project Preview')
