--- a/src/components/skills.pug
+++ b/src/components/skills.pug
@@ -13,9 +13,9 @@ section.skills#skills
                 each item in skills
                     li.skills__item.skills__row
                         h3.skills__item-title #{item[0]}
-                        ul.diagram__list
+                        ul.skills-diagram__list
                             each skill in item[1]
-                                li.diagram__item
+                                li.skills-diagram__item
                                     .skill
                                         svg(viewBox='0 0 100 100' preserveAspectRatio='none').skill__shape
                                             circle(r=40 cx='50' cy="50").skill__circle.skill__circle_under
