--- a/src/styles/blocks/form.pcss
+++ b/src/styles/blocks/form.pcss
@@ -1,5 +1,5 @@
 .form-container {
-  max-width: 60%;
+  max-width: 50%;
   margin-left: 130px;
 }
 .form-title {
@@ -14,17 +14,21 @@
     display: flex;
     margin-right: 50px;
     border-bottom: 1px solid #414c63;
-    opacity: 0.8;
     flex-direction: column;
 
   &:last-child {
       margin-right: 0;
     }
 }
-.form:focus {
-    border-bottom-color: #5500f2;
+.form__block:focus {
+    border-bottom: 1px solid #5500f2;
 }
-
+.form-icon {
+    width: 32px;
+    height: 30px;
+    fill: #414c63;
+    opacity: 0.5;
+}
 .form__block-input {
     background: transparent;
     border: none;
