исправила ошибки в стили

--- a/src/index.pug
+++ b/src/index.pug
@@ -18,6 +18,7 @@ html(lang="ru")
         .maincontent__autmn-bg
           include components/feedback
           include components/footer
+    //- include ./templates/entry.pug
 
 
 
