--- a/src/styles/blocks/arrow.pcss
+++ b/src/styles/blocks/arrow.pcss
@@ -1,5 +1,13 @@
 .arrow__btn--prev, .arrow__btn--next {
-    width: 10px;
-    height: 10px;
-    fill: $text-color;
-  }
+  width: 10px;
+  height: 10px;
+  fill: $text-color;
+}
+.arrow__btn--prev:hover {
+  fill: #596478;
+  transition: fill .3s;
+}
+.arrow__btn--next {
+  fill: #596478;
+  transition: fill .3s;
+}
