адаптив для велком,хиро, скилы

--- a/src/index.pug
+++ b/src/index.pug
@@ -8,6 +8,7 @@ html(lang="ru")
     meta&attributes({'http-equiv': 'X-UA-Compatible', 'content': 'ie=edge'})
     title My Portfolio
   body
+    include components/mobile-menu
     .wrapper
       .maincontent
         include components/welcom
