--- a/src/components/header.pug
+++ b/src/components/header.pug
@@ -5,5 +5,6 @@ header.header
         +menu('header')
         include socials
         +socials('header')
+        include hamburger
 
             
