--- a/src/styles/blocks/hero.pcss
+++ b/src/styles/blocks/hero.pcss
@@ -8,12 +8,25 @@
   align-items: center;
   min-height: 822px;
   padding:53px 250px;
+  @include desktop() {
+    padding-right: 2%;
+    padding-left: 2%;
+  }
+  @include phones() {
+    flex-direction: column;
+    padding-top: 114px;
+    padding-bottom: 114px;
+  }
 }
 .hero__face {
   display: flex;
   justify-content: center;
   margin-bottom: 70px;
   flex-flow: column;
+    @include phones(){
+    width: 100%;
+    margin-bottom: 50px;
+  }
 } 
 .hero__avatar {
   width: 200px;
@@ -53,7 +66,7 @@
   width: 56%;
   padding-bottom: 50px;
 
-  @include phones {
+  @include phones() {
     width: 100%;
   }
 }
@@ -67,6 +80,19 @@
   margin-bottom: 0;
   padding-bottom: 50px;
 }
-.hero__comment-text {
-  font-style:italic;
+.hero__comment {
+  position: relative;
+  font-style: italic;
+  margin-bottom: 36px;
+  &:before {
+    left: calc(-22px - 30px);
+    position: absolute;
+    display: inline;
+    vertical-align: top;
+    content: '*';
+    color: red;
+    font-size: 48px;
+    line-height: 48px;
+    opacity: 0.1;
+  }
 }
