--- a/src/styles/blocks/job-slider.pcss
+++ b/src/styles/blocks/job-slider.pcss
@@ -5,23 +5,53 @@
   position: relative;
 }
 .slider {
-  position: relative;
-  width: 66%;
-  height: 550px;
   display: flex;
-}
-.slider__preview {
-  object-fit: cover;
-  height: 100%;
-  z-index: 1;
-}
+  width: 66%;
+  position: relative;
+  z-index: 4;
+  height: 550px;
+
+  @include tablets() {
+    margin-bottom: 105px;
+    width: 86%;
+  }
+  &:before {
+    content: attr(data-slide);
+    position: absolute;
+    top: 50%;
+    transform: translateY(-60%);
+    line-height: 1;
+    left: 100%;
+    font-size: 400px;
+    font-weight: 800;
+    margin-left: -8%;
+    color: rgba($text-color, .05);
+    
+    @include desktop() {
+      top: 0;
+      transform: translateY(-15%);
+      margin-left: -11%;
+    }
+  }
+  @include phones() {
+    width: 100%;
+    height: auto;
+    margin-bottom: 60px;
+    object-fit: cover;
+    &:before {
+      display: none;
+    }
+  }
+} 
 .slider-list {
   position: absolute;
   right: 0;
   bottom: 0;
   display: flex;
   flex-flow: column;
-  z-index: 1;
+    @include phones() {
+      display: none;
+  }
 }
 .slider-list__item {
   cursor: pointer;
@@ -33,6 +63,13 @@
     filter: saturate(300%);
     transition: filter 0.3s;
   }
+    @include desktop() {
+    width: 144.6px;
+    height: 81px;
+  }
+}
+.slider-list__btn {
+  padding: 0;
 }
 .slider-list__item-pic {
   width: 100%;
@@ -46,6 +83,11 @@
   right: 0;
   bottom: -3.1rem;
   display: flex;
+  
+  @include phones() {
+    bottom: 0;
+    z-index: 2;
+  }
 }
 .slider__switch {
   position: relative;
@@ -90,12 +132,12 @@
   width: 34%;
   display: flex;
 
-  &::before {
+  &:before {
     content: '1';
     position: absolute;
     top: 0;
     left: -55px;
-    z-index: 0;
+    z-index: -2;
     color: #f0f0f0;
     font-size: 400px;
     font-weight: 800;
