--- a/src/styles/blocks/job.pcss
+++ b/src/styles/blocks/job.pcss
@@ -7,4 +7,13 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+    @include phones() {
+      width: 100%;
+  }
+}
+.job-title {
+  @include phones() {
+    text-align: center;
+    margin-bottom: 30px;
+  }
 }
