--- a/src/styles/blocks/menu.pcss
+++ b/src/styles/blocks/menu.pcss
@@ -8,6 +8,13 @@
   &:last-child {
     padding-right: 0; 
   }
+    @include tablets() {
+    padding-right: 2%;
+  
+  &:last-child {
+    padding-right: 0; 
+  }
+  }
 }
 .menu__link {
   text-decoration: none;
