--- a/src/styles/blocks/skills.pcss
+++ b/src/styles/blocks/skills.pcss
@@ -3,10 +3,17 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  @include phones() {
+    margin-bottom: 75px;
+  }
 }
 .skills-container {
   display: flex;
   flex-direction: column;
+  position: relative;
+  @include tablets() {
+    padding-bottom: 350px;
+  }
 
   &:before {
     content: '';
@@ -15,40 +22,88 @@
     background-size: contain;
     background-repeat: no-repeat;
     display: block;
-    height: 60%;
-    width: 40%;
-    bottom:20%;
+    bottom: 5%;
+    height: 79%;
+    width: 69%;
+    left: -5%;
+      @include tablets {
+        bottom: 0;
+        left: 50%;
+        height: 300px;
+        transform: translateX(-50%);
+        background-position: center center;
+      }
+      @include phones {
+      width: 100%;
+    }
   }
 }
 .skills-title {
   font-size: 30px;
+    @include phones() {
+    text-align: left;
+  }
 }
 .skills__content {
-  width: 48%;
-  margin: 0 auto 5.125rem;
-}
-.skills__user {
-  display: flex;
-  justify-content: center;
-  margin-left: 50px;
-
-  @include tablets {
-    margin-top: 50px;
-    justify-content: center;
+  width: 38%;
+  margin-left: 6%;
+  align-self: center;
+  margin-bottom: 75px;
+  @include desktop() {
+    width: 42%;
+    margin-left: 0;
+  }
+  @include tablets() {
+    width: 68%;
+    text-align: center;
+  }
+  @include phones() {
+    width: 100%;
+    margin-left: 0;
+    text-align: left;
   }
 }
 .skills__item-title {
   font-size: 20px;
   color: #414c63;
   font-weight: 700;
+  @include phones() {
+    text-align: center;
+    padding-bottom: 10px;
+  }
+}
+.skills__user {
+  display: flex;
+  justify-content: flex-end;
+  @include tablets() {
+  justify-content: center;
+  }
+}
+.skills__user-container {
+  width: 66%;
+  @include tablets() {
+  width: 95%;
+  }
 }
 .skills-diagram__list {
   display: flex;
-  align-items: center;
-  margin-bottom: 110px;
+  flex-wrap: wrap;
+  margin-left: -4%;
+  @include tablets {
+    margin-left: 0;
+  }
+  @include phones {
+    justify-content: center;
+  }
 }
 .skills-diagram__item {
   position: relative;
+    @include tablets() {
+    margin-left: 0;
+  }
+  @include phones() {
+    justify-content: center;
+  }
 }
 .skill {
   width: 10.375rem;
@@ -56,6 +111,10 @@
   transform: rotate(-180deg);
   fill: transparent;
   position: relative;
+  @include tablets {
+    width: 135px;
+    height: 135px;
+  }
 }
 .skill__circle {
   fill: transparent;
