адаптив для секций

--- a/src/components/feedback.pug
+++ b/src/components/feedback.pug
@@ -1,9 +1,10 @@
 section.feedback#feedback
     .container.feedback-container
-      button.feedback-arrow__prev(type='button')
-        +icon('short_arrow', 'arrow__btn--prev')
-      button.feedback-arrow__next(type='button')
-        +icon('short_arrow', 'arrow__btn--next')
+      .feedback-arrow
+        button.feedback-arrow__prev(type='button')
+          +icon('short_arrow', 'arrow__btn--prev')
+        button.feedback-arrow__next(type='button')
+          +icon('short_arrow', 'arrow__btn--next')
       .feedback__title
         h2.title.feedback-title Что обо мне говорят
       include reviews
