--- a/src/styles/blocks/arrow.pcss
+++ b/src/styles/blocks/arrow.pcss
@@ -7,7 +7,7 @@
   fill: #596478;
   transition: fill .3s;
 }
-.arrow__btn--next {
+.arrow__btn--next:hover {
   fill: #596478;
   transition: fill .3s;
 }
