--- a/src/styles/layout/base.pcss
+++ b/src/styles/layout/base.pcss
@@ -91,13 +91,24 @@ img {
   font-size:16px;
   color:#414c63;
   opacity: 0.7;
+    @include tablets() {
+    font-size: 14px;
+  }
+    @include phones() {
+    font-size: 14px;
+  }
 }
 .title {
   font-size: 36px;
   color: #414c63;
   font-weight: 700;
   margin-bottom: 35px;
-    @include tablets {
+    @include tablets() {
+    text-align: center;
+    font-size: 30px;
+  }
+    @include phones() {
+    font-size: 24px;
     text-align: center;
   }
 }
